// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Renderers #autonomousSystemRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        data-test-subj="cellActions-renderContent-source.as.organization.name"
      >
        <div>
          <div
            class="euiPopover emotion-euiPopover-inline-block"
          >
            <div>
              <div
                tabindex="-1"
              >
                <span
                  class="css-jlsvsc-ProviderContentWrapper e1p0plmv0"
                  data-test-subj="render-content-source.as.organization.name"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    id="generated-id-wrapper"
                  >
                    Test Org
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      /
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        data-test-subj="cellActions-renderContent-source.as.number"
      >
        <div>
          <div
            class="euiPopover emotion-euiPopover-inline-block"
          >
            <div>
              <div
                tabindex="-1"
              >
                <span
                  class="css-jlsvsc-ProviderContentWrapper e1p0plmv0"
                  data-test-subj="render-content-source.as.number"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    id="generated-id-wrapper"
                  >
                    12345
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field Renderers #hostIdRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  <span
    class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row-DefaultFieldRendererComponent"
    data-test-subj="DefaultFieldRendererComponent"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          data-test-subj="cellActions-renderContent-host.id"
        >
          <div>
            <div
              class="euiPopover emotion-euiPopover-inline-block"
            >
              <div>
                <div
                  tabindex="-1"
                >
                  <span
                    class="css-jlsvsc-ProviderContentWrapper e1p0plmv0"
                    data-test-subj="render-content-host.id"
                  >
                    <span
                      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                      id="generated-id-wrapper"
                    >
                      <button
                        class="euiLink emotion-euiLink-primary"
                        data-test-subj="securitySolutionFlyoutLink"
                        type="button"
                      >
                        b19a781f683541a7a25ee345133aa399
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
       
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      />
    </div>
  </span>
</DocumentFragment>
`;

exports[`Field Renderers #hostNameRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  <div
    data-test-subj="cellActions-renderContent-host.name"
  >
    <div>
      <div
        class="euiPopover emotion-euiPopover-inline-block"
      >
        <div>
          <div
            tabindex="-1"
          >
            <span
              class="css-jlsvsc-ProviderContentWrapper e1p0plmv0"
              data-test-subj="render-content-host.name"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                id="generated-id-wrapper"
              >
                <button
                  class="euiLink emotion-euiLink-primary"
                  data-test-subj="securitySolutionFlyoutLink"
                  type="button"
                >
                  raspberrypi
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field Renderers #locationRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        data-test-subj="cellActions-renderContent-source.geo.city_name"
      >
        <div>
          <div
            class="euiPopover emotion-euiPopover-inline-block"
          >
            <div>
              <div
                tabindex="-1"
              >
                <span
                  class="css-jlsvsc-ProviderContentWrapper e1p0plmv0"
                  data-test-subj="render-content-source.geo.city_name"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    id="generated-id-wrapper"
                  >
                    New York
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    , 
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        data-test-subj="cellActions-renderContent-source.geo.region_name"
      >
        <div>
          <div
            class="euiPopover emotion-euiPopover-inline-block"
          >
            <div>
              <div
                tabindex="-1"
              >
                <span
                  class="css-jlsvsc-ProviderContentWrapper e1p0plmv0"
                  data-test-subj="render-content-source.geo.region_name"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                    id="generated-id-wrapper"
                  >
                    New York
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field Renderers #reputationRenderer it renders correctly against snapshot 1`] = `<DocumentFragment />`;

exports[`Field Renderers #whoisRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  <span
    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
    id="generated-id-wrapper"
  >
    <a
      class="euiLink emotion-euiLink-primary"
      data-test-subj="externalLink"
      href="https://www.iana.org/whois?q=10.10.10.10"
      rel="noopener noreferrer"
      target="_blank"
    >
      iana.org
      <span
        class="emotion-EuiExternalLinkIcon"
        data-euiicon-type="popout"
        role="presentation"
      />
      <span
        class="emotion-euiScreenReaderOnly"
      >
        (external, opens in a new tab or window)
      </span>
    </a>
  </span>
</DocumentFragment>
`;
